--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
+# Get your Bot Token from @BotFather on Telegram
+TELEGRAM_TOKEN="YOUR_TELEGRAM_BOT_TOKEN_HERE"
 
+# Get your numeric User ID from @userinfobot on Telegram
+ADMIN_USER_ID="YOUR_TELEGRAM_USER_ID_HERE"
