--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Get your Bot Token from @BotFather on Telegram
-TELEGRAM_TOKEN="YOUR_TELEGRAM_BOT_TOKEN_HERE"
+TELEGRAM_TOKEN="7811759699:AAEAAUIGWDWgyjNl4yahDUvaPtvpZ_p3iZY"
 
 # Get your numeric User ID from @userinfobot on Telegram
-ADMIN_USER_ID="YOUR_TELEGRAM_USER_ID_HERE"
+ADMIN_USER_ID="1999010840"
